// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EventStateInfo should render with one class 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-fcgc4g-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 css-fleitu-MuiGrid-root"
  />
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render with two classes 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-fcgc4g-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1nqaa3n-MuiGrid-root"
  >
    ALO
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-12rrlgf-MuiGrid-root"
  >
    dateFormat.wdshort date
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render without classes 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-fcgc4g-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-6 css-fleitu-MuiGrid-root"
  />
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    2
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    3
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1ml28lu-MuiGrid-root"
  >
    1
  </div>
</div>
`;
